<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.glowroot</groupId>
    <artifactId>glowroot-parent</artifactId>
    <version>0.9.11-SNAPSHOT</version>
    <relativePath>../../..</relativePath>
  </parent>

  <artifactId>glowroot-agent-grails-plugin</artifactId>

  <name>Glowroot Agent Grails Plugin</name>
  <description>Glowroot Agent Grails Plugin</description>

  <properties>
    <!-- instrumented libraries -->
    <grails.version>3.2.4</grails.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.glowroot</groupId>
      <artifactId>glowroot-agent-plugin-api</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <!-- don't need this dependency at runtime since only annotations -->
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glowroot</groupId>
      <artifactId>glowroot-agent-it-harness</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.ning</groupId>
      <artifactId>async-http-client</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat.embed</groupId>
      <artifactId>tomcat-embed-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat.embed</groupId>
      <artifactId>tomcat-embed-jasper</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.tomcat.embed</groupId>
      <artifactId>tomcat-embed-logging-juli</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.grails</groupId>
      <artifactId>grails-web-boot</artifactId>
      <version>${grails.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- normally grails-plugin-* dependencies are pulled in by using
        org.grails:grails-dependencies, but there is no grails-dependencies 3.1.9 in maven central
        so just embedding grails-plugin-* dependencies directly -->
      <groupId>org.grails</groupId>
      <artifactId>grails-plugin-rest</artifactId>
      <version>${grails.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.grails</groupId>
      <artifactId>grails-plugin-databinding</artifactId>
      <version>${grails.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.grails</groupId>
      <artifactId>grails-plugin-i18n</artifactId>
      <version>${grails.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.grails</groupId>
      <artifactId>grails-plugin-gsp</artifactId>
      <version>${grails.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.grails</groupId>
      <artifactId>grails-plugin-services</artifactId>
      <version>${grails.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.grails</groupId>
      <artifactId>grails-plugin-url-mappings</artifactId>
      <version>${grails.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.grails</groupId>
      <artifactId>grails-plugin-interceptors</artifactId>
      <version>${grails.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.grails</groupId>
      <artifactId>grails-plugin-async</artifactId>
      <version>${grails.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- servlet plugin is included to capture transactions -->
      <groupId>org.glowroot</groupId>
      <artifactId>glowroot-agent-servlet-plugin</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- this is to resolve maven enforcer RequireUpperBoundDeps error -->
      <groupId>org.aspectj</groupId>
      <artifactId>aspectjweaver</artifactId>
      <version>1.8.10</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- this is to resolve maven enforcer RequireUpperBoundDeps error -->
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>4.3.6.RELEASE</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- this is to resolve maven enforcer RequireUpperBoundDeps error -->
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>4.3.6.RELEASE</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- this is to resolve maven enforcer RequireUpperBoundDeps error -->
      <groupId>commons-validator</groupId>
      <artifactId>commons-validator</artifactId>
      <version>1.5.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <!-- this is just so eclipse will use Java 7 for this module, since Java 7 is needed for
            running the tests against the latest version of grails -->
          <artifactId>maven-compiler-plugin</artifactId>
          <executions>
            <execution>
              <id>default-testCompile</id>
              <configuration>
                <source>1.7</source>
                <target>1.7</target>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>java7</id>
      <activation>
        <jdk>1.7</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-failsafe-plugin</artifactId>
            <configuration>
              <!-- this is needed when building with Java 7 -->
              <argLine>-XX:MaxPermSize=128m</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>grails-3.2.0</id>
      <!-- this is needed for grails 3.2.0 because grails-plugin-rest 3.2.0 has a dependency on
        versions 6.0.0.RELEASE of the below artifacts which do not exist in maven central -->
      <dependencyManagement>
        <dependencies>
          <dependency>
            <groupId>org.grails</groupId>
            <artifactId>grails-datastore-core</artifactId>
            <version>6.0.1.RELEASE</version>
            <scope>test</scope>
          </dependency>
          <dependency>
            <groupId>org.grails</groupId>
            <artifactId>grails-datastore-simple</artifactId>
            <version>6.0.1.RELEASE</version>
            <scope>test</scope>
          </dependency>
          <dependency>
            <groupId>org.grails</groupId>
            <artifactId>grails-datastore-gorm</artifactId>
            <version>6.0.1.RELEASE</version>
            <scope>test</scope>
          </dependency>
          <dependency>
            <groupId>org.grails</groupId>
            <artifactId>grails-datastore-gorm-support</artifactId>
            <version>6.0.1.RELEASE</version>
            <scope>test</scope>
          </dependency>
          <dependency>
            <groupId>org.grails</groupId>
            <artifactId>grails-datastore-gorm-validation</artifactId>
            <version>6.0.1.RELEASE</version>
            <scope>test</scope>
          </dependency>
        </dependencies>
      </dependencyManagement>
    </profile>
  </profiles>
</project>
